add KMU project

--- a/en/project/kyiv-medical-university.html
+++ b/en/project/kyiv-medical-university.html
@@ -80,10 +80,7 @@
                   <li><a href="../about-us" class="__hover"> About us </a></li>
                   <li><a href="../contacts" class="__hover"> Contacts </a></li>
                   <li>
-                    <a
-                      href="../../project/administr-complex-bandery"
-                      class="__hover"
-                    >
+                    <a href="../en/kyiv-medical-university" class="__hover">
                       Ua
                     </a>
                   </li>
@@ -154,7 +151,7 @@
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
                       <img
-                        src="../../assets/pic/07_bandery_11/slider/07_01.jpg"
+                        src="../../assets/pic/08_kmu/slider/08_01.jpg"
                         alt=""
                       />
                     </div>
@@ -162,7 +159,7 @@
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
                       <img
-                        src="../../assets/pic/07_bandery_11/slider/06_02_en.png"
+                        src="../../assets/pic/08_kmu/slider/08_02.png"
                         alt=""
                       />
                     </div>
@@ -170,7 +167,7 @@
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
                       <img
-                        src="../../assets/pic/07_bandery_11/slider/07_03.png"
+                        src="../../assets/pic/08_kmu/slider/08_03.png"
                         alt=""
                       />
                     </div>
@@ -178,7 +175,7 @@
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
                       <img
-                        src="../../assets/pic/07_bandery_11/slider/07_04.png"
+                        src="../../assets/pic/08_kmu/slider/08_04.png"
                         alt=""
                       />
                     </div>
@@ -186,7 +183,7 @@
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
                       <img
-                        src="../../assets/pic/07_bandery_11/slider/07_05.png"
+                        src="../../assets/pic/08_kmu/slider/08_05.png"
                         alt=""
                       />
                     </div>
@@ -194,7 +191,7 @@
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
                       <img
-                        src="../../assets/pic/07_bandery_11/slider/07_06.png"
+                        src="../../assets/pic/08_kmu/slider/08_06.png"
                         alt=""
                       />
                     </div>
@@ -202,7 +199,7 @@
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
                       <img
-                        src="../../assets/pic/07_bandery_11/slider/07_07.png"
+                        src="../../assets/pic/08_kmu/slider/08_07.jpg"
                         alt=""
                       />
                     </div>
@@ -210,7 +207,7 @@
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
                       <img
-                        src="../../assets/pic/07_bandery_11/slider/07_08.png"
+                        src="../../assets/pic/08_kmu/slider/08_08.jpg"
                         alt=""
                       />
                     </div>
@@ -218,7 +215,7 @@
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
                       <img
-                        src="../../assets/pic/07_bandery_11/slider/07_09.png"
+                        src="../../assets/pic/08_kmu/slider/08_09.jpg"
                         alt=""
                       />
                     </div>
@@ -226,7 +223,7 @@
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
                       <img
-                        src="../../assets/pic/07_bandery_11/slider/07_10.jpg"
+                        src="../../assets/pic/08_kmu/slider/08_10.jpg"
                         alt=""
                       />
                     </div>
@@ -234,7 +231,7 @@
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
                       <img
-                        src="../../assets/pic/07_bandery_11/slider/07_11.jpg"
+                        src="../../assets/pic/08_kmu/slider/08_11.jpg"
                         alt=""
                       />
                     </div>
@@ -242,7 +239,7 @@
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
                       <img
-                        src="../../assets/pic/07_bandery_11/slider/07_12.jpg"
+                        src="../../assets/pic/08_kmu/slider/08_12.jpg"
                         alt=""
                       />
                     </div>
@@ -250,7 +247,7 @@
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
                       <img
-                        src="../../assets/pic/07_bandery_11/slider/07_13.jpg"
+                        src="../../assets/pic/08_kmu/slider/08_13.jpg"
                         alt=""
                       />
                     </div>
@@ -258,7 +255,55 @@
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
                       <img
-                        src="../../assets/pic/07_bandery_11/slider/07_14.jpg"
+                        src="../../assets/pic/08_kmu/slider/08_14.jpg"
+                        alt=""
+                      />
+                    </div>
+                  </div>
+                  <div class="image-slider__slide swiper-slide">
+                    <div class="image-slider__image">
+                      <img
+                        src="../../assets/pic/08_kmu/slider/08_15.jpg"
+                        alt=""
+                      />
+                    </div>
+                  </div>
+                  <div class="image-slider__slide swiper-slide">
+                    <div class="image-slider__image">
+                      <img
+                        src="../../assets/pic/08_kmu/slider/08_16.jpg"
+                        alt=""
+                      />
+                    </div>
+                  </div>
+                  <div class="image-slider__slide swiper-slide">
+                    <div class="image-slider__image">
+                      <img
+                        src="../../assets/pic/08_kmu/slider/08_17.jpg"
+                        alt=""
+                      />
+                    </div>
+                  </div>
+                  <div class="image-slider__slide swiper-slide">
+                    <div class="image-slider__image">
+                      <img
+                        src="../../assets/pic/08_kmu/slider/08_18.jpg"
+                        alt=""
+                      />
+                    </div>
+                  </div>
+                  <div class="image-slider__slide swiper-slide">
+                    <div class="image-slider__image">
+                      <img
+                        src="../../assets/pic/08_kmu/slider/08_19.jpg"
+                        alt=""
+                      />
+                    </div>
+                  </div>
+                  <div class="image-slider__slide swiper-slide">
+                    <div class="image-slider__image">
+                      <img
+                        src="../../assets/pic/08_kmu/slider/08_20.jpg"
                         alt=""
                       />
                     </div>
