--- a/project/kyiv-medical-university.html
+++ b/project/kyiv-medical-university.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -13,17 +13,17 @@
       content="architecture, project, projects, Anna Kyrii, architect, architectural group, architectural design"
     />
     <meta name="author" content="Anna Kyrii Architectural Projecting Group" />
-    <link rel="stylesheet" href="../../assets/style/preloader.css" />
-    <link rel="stylesheet" href="../../assets/style/normalize.css" />
-    <link rel="stylesheet" href="../../assets/style/style.css" />
-    <link rel="stylesheet" href="../../assets/style/style_projects.css" />
-    <link rel="stylesheet" href="../../assets/style/style_about-us.css" />
+    <link rel="stylesheet" href="../assets/style/preloader.css" />
+    <link rel="stylesheet" href="../assets/style/normalize.css" />
+    <link rel="stylesheet" href="../assets/style/style.css" />
+    <link rel="stylesheet" href="../assets/style/style_projects.css" />
+    <link rel="stylesheet" href="../assets/style/style_about-us.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="style/project-slider-style.css" />
-    <link rel="stylesheet" href="../../assets/style/media.css" />
+    <link rel="stylesheet" href="../assets/style/media.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -32,7 +32,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="../../assets/pic/00_general/logo_new.png"
+      href="../assets/pic/00_general/logo_new.png"
     />
   </head>
   <body>
@@ -56,7 +56,7 @@
             <div class="header__logo">
               <a href="../" class="header_logo-pic"
                 ><img
-                  src="../../assets/pic/00_general/logo_black.svg"
+                  src="../assets/pic/00_general/logo_black.svg"
                   class="header_logo-pic"
                   alt="Anna Kyrii"
               /></a>
@@ -75,16 +75,13 @@
               <nav class="menu__body">
                 <ul class="menu__list">
                   <li>
-                    <a href="../all-projects" class="__hover"> Projects </a>
+                    <a href="../all-projects" class="__hover"> Проекти </a>
                   </li>
-                  <li><a href="../about-us" class="__hover"> About us </a></li>
-                  <li><a href="../contacts" class="__hover"> Contacts </a></li>
+                  <li><a href="../about-us" class="__hover"> Про нас </a></li>
+                  <li><a href="../contacts" class="__hover"> Контакти </a></li>
                   <li>
-                    <a
-                      href="../../project/administr-complex-bandery"
-                      class="__hover"
-                    >
-                      Ua
+                    <a href="../en/kyiv-medical-university" class="__hover">
+                      En
                     </a>
                   </li>
                   <li>
@@ -153,114 +150,102 @@
                 <div class="image-slider__wrapper swiper-wrapper">
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
-                      <img
-                        src="../../assets/pic/07_bandery_11/slider/07_01.jpg"
-                        alt=""
-                      />
+                      <img src="../assets/pic/08_kmu/slider/08_01.jpg" alt="" />
                     </div>
                   </div>
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
-                      <img
-                        src="../../assets/pic/07_bandery_11/slider/06_02_en.png"
-                        alt=""
-                      />
+                      <img src="../assets/pic/08_kmu/slider/08_02.png" alt="" />
                     </div>
                   </div>
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
-                      <img
-                        src="../../assets/pic/07_bandery_11/slider/07_03.png"
-                        alt=""
-                      />
+                      <img src="../assets/pic/08_kmu/slider/08_03.png" alt="" />
                     </div>
                   </div>
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
-                      <img
-                        src="../../assets/pic/07_bandery_11/slider/07_04.png"
-                        alt=""
-                      />
+                      <img src="../assets/pic/08_kmu/slider/08_04.png" alt="" />
                     </div>
                   </div>
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
-                      <img
-                        src="../../assets/pic/07_bandery_11/slider/07_05.png"
-                        alt=""
-                      />
+                      <img src="../assets/pic/08_kmu/slider/08_05.png" alt="" />
                     </div>
                   </div>
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
-                      <img
-                        src="../../assets/pic/07_bandery_11/slider/07_06.png"
-                        alt=""
-                      />
+                      <img src="../assets/pic/08_kmu/slider/08_06.png" alt="" />
                     </div>
                   </div>
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
-                      <img
-                        src="../../assets/pic/07_bandery_11/slider/07_07.png"
-                        alt=""
-                      />
+                      <img src="../assets/pic/08_kmu/slider/08_07.jpg" alt="" />
                     </div>
                   </div>
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
-                      <img
-                        src="../../assets/pic/07_bandery_11/slider/07_08.png"
-                        alt=""
-                      />
+                      <img src="../assets/pic/08_kmu/slider/08_08.jpg" alt="" />
                     </div>
                   </div>
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
-                      <img
-                        src="../../assets/pic/07_bandery_11/slider/07_09.png"
-                        alt=""
-                      />
+                      <img src="../assets/pic/08_kmu/slider/08_09.jpg" alt="" />
                     </div>
                   </div>
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
-                      <img
-                        src="../../assets/pic/07_bandery_11/slider/07_10.jpg"
-                        alt=""
-                      />
+                      <img src="../assets/pic/08_kmu/slider/08_10.jpg" alt="" />
                     </div>
                   </div>
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
-                      <img
-                        src="../../assets/pic/07_bandery_11/slider/07_11.jpg"
-                        alt=""
-                      />
+                      <img src="../assets/pic/08_kmu/slider/08_11.jpg" alt="" />
                     </div>
                   </div>
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
-                      <img
-                        src="../../assets/pic/07_bandery_11/slider/07_12.jpg"
-                        alt=""
-                      />
+                      <img src="../assets/pic/08_kmu/slider/08_12.jpg" alt="" />
                     </div>
                   </div>
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
-                      <img
-                        src="../../assets/pic/07_bandery_11/slider/07_13.jpg"
-                        alt=""
-                      />
+                      <img src="../assets/pic/08_kmu/slider/08_13.jpg" alt="" />
                     </div>
                   </div>
                   <div class="image-slider__slide swiper-slide">
                     <div class="image-slider__image">
-                      <img
-                        src="../../assets/pic/07_bandery_11/slider/07_14.jpg"
-                        alt=""
-                      />
+                      <img src="../assets/pic/08_kmu/slider/08_14.jpg" alt="" />
+                    </div>
+                  </div>
+                  <div class="image-slider__slide swiper-slide">
+                    <div class="image-slider__image">
+                      <img src="../assets/pic/08_kmu/slider/08_15.jpg" alt="" />
+                    </div>
+                  </div>
+                  <div class="image-slider__slide swiper-slide">
+                    <div class="image-slider__image">
+                      <img src="../assets/pic/08_kmu/slider/08_16.jpg" alt="" />
+                    </div>
+                  </div>
+                  <div class="image-slider__slide swiper-slide">
+                    <div class="image-slider__image">
+                      <img src="../assets/pic/08_kmu/slider/08_17.jpg" alt="" />
+                    </div>
+                  </div>
+                  <div class="image-slider__slide swiper-slide">
+                    <div class="image-slider__image">
+                      <img src="../assets/pic/08_kmu/slider/08_18.jpg" alt="" />
+                    </div>
+                  </div>
+                  <div class="image-slider__slide swiper-slide">
+                    <div class="image-slider__image">
+                      <img src="../assets/pic/08_kmu/slider/08_19.jpg" alt="" />
+                    </div>
+                  </div>
+                  <div class="image-slider__slide swiper-slide">
+                    <div class="image-slider__image">
+                      <img src="../assets/pic/08_kmu/slider/08_20.jpg" alt="" />
                     </div>
                   </div>
                 </div>
@@ -273,9 +258,9 @@
         </div>
       </section>
     </main>
-    <script src="../../assets/js/preloader.js"></script>
-    <script src="../../assets/js/burger.js"></script>
+    <script src="../assets/js/preloader.js"></script>
+    <script src="../assets/js/burger.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <script src="../../assets/js/project-slider.js"></script>
+    <script src="../assets/js/project-slider.js"></script>
   </body>
 </html>
