--- a/en/all-projects.html
+++ b/en/all-projects.html
@@ -175,27 +175,27 @@
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="../assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="project/warning" class="project__text"> Business Center, Kyiv </a>
+                                    <a href="project/administr-complex-bandery" class="project__text"> Business Center, Kyiv </a>
                                 </div>
                             </div>
                             <div class="project__kmu project__content education">
                                 <div class="project__img">
-                                    <a href="project/warning"><img src="../assets/pic/08_kmu/front-kmu.jpg" class="project__photo-hover"></a>
-                                    <a href="project/warning"><img src="../assets/pic/08_kmu/front-kmu-bw.jpg" class="project__photo"></a>
+                                    <a href="project/kyiv-medical-university"><img src="../assets/pic/08_kmu/front-kmu.jpg" class="project__photo-hover"></a>
+                                    <a href="project/kyiv-medical-university"><img src="../assets/pic/08_kmu/front-kmu-bw.jpg" class="project__photo"></a>
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="../assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="project/warning" class="project__text"> Medical University, Kyiv </a>
+                                    <a href="project/kyiv-medical-university" class="project__text"> Medical University, Kyiv </a>
                                 </div>
                             </div>
                             <div class="project__boz project__content public">
                                 <div class="project__img">
-                                    <a href="project/warning"><img src="../assets/pic/09_boz/front-boz.jpg" class="project__photo-hover"></a>
-                                    <a href="project/warning"><img src="../assets/pic/09_boz/front-boz-bw.jpg" class="project__photo"></a>
+                                    <a href="project/brovary-offices"><img src="../assets/pic/09_boz/front-boz.jpg" class="project__photo-hover"></a>
+                                    <a href="project/brovary-offices"><img src="../assets/pic/09_boz/front-boz-bw.jpg" class="project__photo"></a>
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="../assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="project/warning" class="project__text"> Business Center, Brovary </a>
+                                    <a href="project/brovary-offices" class="project__text"> Business Center, Brovary </a>
                                 </div>
                             </div>
                             <div class="project__cherkasska-shk project__content housing">
