--- a/en/project/kyiv-medical-university.html
+++ b/en/project/kyiv-medical-university.html
@@ -80,7 +80,7 @@
                   <li><a href="../about-us" class="__hover"> About us </a></li>
                   <li><a href="../contacts" class="__hover"> Contacts </a></li>
                   <li>
-                    <a href="../en/kyiv-medical-university" class="__hover">
+                    <a href="../../project/kyiv-medical-university" class="__hover">
                       Ua
                     </a>
                   </li>
