add cherkasy-ahk project

--- a/en/all-projects.html
+++ b/en/all-projects.html
@@ -186,12 +186,12 @@
                             </div>
                             <div class="project__cherkasska-shk project__content housing">
                                 <div class="project__img">
-                                    <a href="project/warning"><img src="../assets/pic/10_cherkasska-shk/front-cherkasska-shk.jpg" class="project__photo-hover"></a>
-                                    <a href="project/warning"><img src="../assets/pic/10_cherkasska-shk/front-cherkasska-shk-bw.jpg" class="project__photo"></a>
+                                    <a href="project/cherkasy-housing"><img src="../assets/pic/10_cherkasska-shk/front-cherkasska-shk.jpg" class="project__photo-hover"></a>
+                                    <a href="project/cherkasy-housing"><img src="../assets/pic/10_cherkasska-shk/front-cherkasska-shk-bw.jpg" class="project__photo"></a>
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="../assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="project/warning" class="project__text"> Residential complex, Cherkasy </a>
+                                    <a href="project/cherkasy-housing" class="project__text"> Residential complex, Cherkasy </a>
                                 </div>
                             </div>
                             <div class="project__ishevska project__content housing">
