--- a/all-projects.html
+++ b/all-projects.html
@@ -196,12 +196,12 @@
                             </div>
                             <div class="project__ishevska project__content housing">
                                 <div class="project__img">
-                                    <a href="project/warning"><img src="assets/pic/11_ishevska/front-ishevska.jpg" class="project__photo-hover"></a>
-                                    <a href="project/warning"><img src="assets/pic/11_ishevska/front-ishevska-bw.jpg" class="project__photo"></a>
+                                    <a href="project/ishevska"><img src="assets/pic/11_ishevska/front-ishevska.jpg" class="project__photo-hover"></a>
+                                    <a href="project/ishevska"><img src="assets/pic/11_ishevska/front-ishevska-bw.jpg" class="project__photo"></a>
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="project/warning" class="project__text"> Житловий комплекс, Київ </a>
+                                    <a href="project/ishevska" class="project__text"> Житловий комплекс, Київ </a>
                                 </div>
                             </div>
                             <div class="project__cherkasska project__content housing">
