--- a/all-projects.html
+++ b/all-projects.html
@@ -206,12 +206,12 @@
                             </div>
                             <div class="project__cherkasska project__content housing">
                                 <div class="project__img">
-                                    <a href="project/warning"><img src="assets/pic/12_cherkasska/front-cherkasska.jpg" class="project__photo-hover"></a>
-                                    <a href="project/warning"><img src="assets/pic/12_cherkasska/front-cherkasska-bw.jpg" class="project__photo"></a>
+                                    <a href="project/cherkasska-housing"><img src="assets/pic/12_cherkasska/front-cherkasska.jpg" class="project__photo-hover"></a>
+                                    <a href="project/cherkasska-housing"><img src="assets/pic/12_cherkasska/front-cherkasska-bw.jpg" class="project__photo"></a>
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="project/warning" class="project__text"> Житловий будинок, Київ </a>
+                                    <a href="project/cherkasska-housing" class="project__text"> Житловий будинок, Київ </a>
                                 </div>
                             </div>
                             <div class="project__lectorium project__content interrior">
