add Myrna project

--- a/all-projects.html
+++ b/all-projects.html
@@ -306,12 +306,12 @@
                             </div>
                             <div class="project__myrna project__content housing">
                                 <div class="project__img">
-                                    <a href="project/warning"><img src="assets/pic/22_myrna/front-myrna.jpg" class="project__photo-hover"></a>
-                                    <a href="project/warning"><img src="assets/pic/22_myrna/front-myrna-bw.jpg" class="project__photo"></a>
+                                    <a href="project/myrna-housing"><img src="assets/pic/22_myrna/front-myrna.jpg" class="project__photo-hover"></a>
+                                    <a href="project/myrna-housing"><img src="assets/pic/22_myrna/front-myrna-bw.jpg" class="project__photo"></a>
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="project/warning" class="project__text"> Житловий будинок, Київ </a>
+                                    <a href="project/myrna-housing" class="project__text"> Житловий будинок, Київ </a>
                                 </div>
                             </div>
                             <div class="project__townhouse project__content housing">
