--- a/en/all-projects.html
+++ b/en/all-projects.html
@@ -316,12 +316,12 @@
                             </div>
                             <div class="project__townhouse project__content housing">
                                 <div class="project__img">
-                                    <a href="project/warning"><img src="../assets/pic/23_townhouses-puscha-vodytsya/front-townhouses.jpg" class="project__photo-hover"></a>
-                                    <a href="project/warning"><img src="../assets/pic/23_townhouses-puscha-vodytsya/front-townhouses-bw.jpg" class="project__photo"></a>
+                                    <a href="project/townhouses-puscha-vodytsya"><img src="../assets/pic/23_townhouses-puscha-vodytsya/front-townhouses.jpg" class="project__photo-hover"></a>
+                                    <a href="project/townhouses-puscha-vodytsya"><img src="../assets/pic/23_townhouses-puscha-vodytsya/front-townhouses-bw.jpg" class="project__photo"></a>
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="../assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="project/warning" class="project__text"> Townhouses in Pushcha-Vodytsia, Kyiv </a>
+                                    <a href="project/townhouses-puscha-vodytsya" class="project__text"> Townhouses in Pushcha-Vodytsia, Kyiv </a>
                                 </div>
                             </div>
                             <div class="project__fontanska project__content housing">
