add Fontanska project

--- a/all-projects.html
+++ b/all-projects.html
@@ -326,12 +326,12 @@
                             </div>
                             <div class="project__fontanska project__content housing">
                                 <div class="project__img">
-                                    <a href="project/warning"><img src="assets/pic/24_fontanska/front-fontanska.jpg" class="project__photo-hover"></a>
-                                    <a href="project/warning"><img src="assets/pic/24_fontanska/front-fontanska-bw.jpg" class="project__photo"></a>
+                                    <a href="project/fontanska"><img src="assets/pic/24_fontanska/front-fontanska.jpg" class="project__photo-hover"></a>
+                                    <a href="project/fontanska"><img src="assets/pic/24_fontanska/front-fontanska-bw.jpg" class="project__photo"></a>
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="project/warning" class="project__text"> Будинок з апартаментами, Одеса </a>
+                                    <a href="project/fontanska" class="project__text"> Будинок з апартаментами, Одеса </a>
                                 </div>
                             </div>
                             <div class="project__kmu-cedika project__content education">
