add Teremkivska project

--- a/en/all-projects.html
+++ b/en/all-projects.html
@@ -386,12 +386,12 @@
                             </div>
                             <div class="project__teremkivska project__content housing">
                                 <div class="project__img">
-                                    <a href="project/warning"><img src="../assets/pic/30_teremkivska/front-teremkivska.jpg" class="project__photo-hover"></a>
-                                    <a href="project/warning"><img src="../assets/pic/30_teremkivska/front-teremkivska-bw.jpg" class="project__photo"></a>
+                                    <a href="project/teremkivska"><img src="../assets/pic/30_teremkivska/front-teremkivska.jpg" class="project__photo-hover"></a>
+                                    <a href="project/teremkivska"><img src="../assets/pic/30_teremkivska/front-teremkivska-bw.jpg" class="project__photo"></a>
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="../assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="project/warning" class="project__text"> Residential complex, Kyiv </a>
+                                    <a href="project/teremkivska" class="project__text"> Residential complex, Kyiv </a>
                                 </div>
                             </div>
                             <div class="project__sviatopetrivske project__content housing">
