--- a/all-projects.html
+++ b/all-projects.html
@@ -416,12 +416,12 @@
                             </div>                           
                             <div class="project__strumochok project__content housing">
                                 <div class="project__img">
-                                    <a href="project/warning"><img src="assets/pic/33_strumochok/front-strumochok.jpg" class="project__photo-hover"></a>
-                                    <a href="project/warning"><img src="assets/pic/33_strumochok/front-strumochok-bw.jpg" class="project__photo"></a>
+                                    <a href="project/strumochok"><img src="assets/pic/33_strumochok/front-strumochok.jpg" class="project__photo-hover"></a>
+                                    <a href="project/strumochok"><img src="assets/pic/33_strumochok/front-strumochok-bw.jpg" class="project__photo"></a>
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="project/warning" class="project__text"> Житловий комплекс "Струмочок", Київ </a>
+                                    <a href="project/strumochok" class="project__text"> Житловий комплекс "Струмочок", Київ </a>
                                 </div>
                             </div>
                             <div class="project__ippotherapy project__content healthcare">
