add sviatopetrivske project

--- a/all-projects.html
+++ b/all-projects.html
@@ -396,12 +396,12 @@
                             </div>
                             <div class="project__sviatopetrivske project__content housing">
                                 <div class="project__img">
-                                    <a href="project/warning"><img src="assets/pic/31_sviatopetrivske/front-sviatopetrivske.jpg" class="project__photo-hover"></a>
-                                    <a href="project/warning"><img src="assets/pic/31_sviatopetrivske/front-sviatopetrivske-bw.jpg" class="project__photo"></a>
+                                    <a href="project/sviatopetrivske"><img src="assets/pic/31_sviatopetrivske/front-sviatopetrivske.jpg" class="project__photo-hover"></a>
+                                    <a href="project/sviatopetrivske"><img src="assets/pic/31_sviatopetrivske/front-sviatopetrivske-bw.jpg" class="project__photo"></a>
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="project/warning" class="project__text"> Котеджне містечко, Київська обл. </a>
+                                    <a href="project/sviatopetrivske" class="project__text"> Котеджне містечко, Київська обл. </a>
                                 </div>
                             </div> 
                             <div class="project__port-mykolaiv project__content leisure">
